<resources>
    <string name="app_name">SingEnglish!</string>
    <string name="title_fav">Favourites</string>
    <string name="title_main">Main</string>
    <string name="title_vocab">Vocabulary</string>
    <string name="textview">TextView</string>
    <string name="tv_defaut_name">Name</string>
    <string name="tv_default_artist">Artist</string>
    <string name="state_default">DEFAULT</string>

    <string name="quiz_warning">For quiz you should have at least 4 words</string>
    <string name="tv_popular_videos">Most popular videos</string>
    <string name="choose_difficulty_level">Choose difficulty level</string>
    <string name="btnTitleHard">Hard</string>
    <string name="btnTitleMedium">Medium</string>
    <string name="btnTitleEasy">Easy</string>
    <string name="tv_statistic">Statistic</string>
    <string name="btn_continue">Continue</string>

    <string name="dialogTitle">Confirm navigation</string>
    <string name="dialogText">Are you sure you want to leave?</string>
    <string name="dialogNegative">Quit</string>
    <string name="dialogPositive">Continue</string>
    <string name="dialogTextStat">Are you sure you want to leave? Your progress won\'t be stored</string>
    <string name="repeat">Repeat</string>
    <string name="save">save</string>
    <string name="chooseWords">Choose words to save them to vocabulary</string>
    <string name="tv_title_pop">Pop</string>
    <string name="tv_title_hip_hop">Hip hop</string>
    <string name="tv_title_rock">Rock</string>
    <string name="btn_title_check">check</string>
    <string name="til_hint_answer">answer</string>
    <string name="tv_nothing_found">Nothing found, sorry.</string>
    <string name="tv_no_internet">Oops, no internet \n connection.</string>
</resources>
