<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/android_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="ru.itis.sing_english.view.ui.MainPageFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_mainpage" />

    <fragment
        android:id="@+id/navigation_fav"
        android:name="ru.itis.sing_english.view.ui.FavouritesFragment"
        android:label="@string/title_fav"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_vocab"
        android:name="ru.itis.sing_english.view.ui.VocabularyFragment"
        android:label="@string/title_vocab"
        tools:layout="@layout/fragment_vocabulary" />
</navigation>