<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".presentation.view.ui.ChooseLevelFragment">

        <TextView
            android:id="@+id/tvChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_difficulty_level"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEasy"
            style="@style/ButtonDifficultyStyle"
            android:text="@string/btnTitleEasy"
            android:textColor="@color/colorDiffEasy"
            app:strokeColor="@color/colorDiffEasy" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNormal"
            style="@style/ButtonDifficultyStyle"
            android:text="@string/btnTitleMedium"
            android:textColor="@color/colorDiffMedium"
            app:strokeColor="@color/colorDiffMedium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHard"
            style="@style/ButtonDifficultyStyle"
            android:text="@string/btnTitleHard"
            android:textColor="@color/colorDiffHard"
            app:strokeColor="@color/colorDiffHard" />
    </LinearLayout>
</layout>
