<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.itis.sing_english.fragments.FavouritesFragment"
        android:label="@string/title_fav"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ru.itis.sing_english.fragments.MainPageFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_mainpage" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ru.itis.sing_english.fragments.VocabularyFragment"
        android:label="@string/title_vocab"
        tools:layout="@layout/fragment_vocabulary" />
</navigation>